<resources>
    <string name="app_name">WheelieSmart.v1.7</string>
    <string name="title">WheelieSmart</string>
    <string name="add_new_bin">Add New Bin</string>
    <string name="manage_bins">Manage Bins</string>
    <string name="settings">Settings</string>
    <string name="bin_name_entry">Bin Name</string>
    <string name="bin_code_entry">Bin Code</string>
    <string name="create_new_bin_btn">Add Bin</string> <!-- You had it as "Create Bin!" but I personally think this sounds better -->
    <string name="done_for_now_btn">Done for Now</string>
    <string name="setup_schedule_btn">Setup Schedule</string>
    <string name="placeholder_setup_confirmation_text">%1$s has been connected! Would you like to setup it\'s schedule now?</string>
    <string name="bin_stats">name: %1$s |code %2$s | day %3$s</string>
    <string name="monday_btn">Monday</string>
    <string name="tuesday_btn">Tuesday</string>
    <string name="wednesday_btn">Wednesday</string>
    <string name="thursday_btn">Thursday</string>
    <string name="friday_btn">Friday</string>
    <string name="saturday_btn">Saturday</string>
    <string name="sunday_btn">Sunday</string>
    <string name="update_schedule_btn">Update Schedule</string>
    <string name="schedule_updated">Bin Schedule Updated</string>
    <string name="home">Home</string>
    <string name="save_changes">Save Changes</string>
</resources>
