<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BinSuccessPage">

    <Button
        android:id="@+id/scheduleBtn"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_rounded"
        android:fontFamily="sans-serif-medium"
        android:text="@string/update_schedule_btn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmationText" />

    <Button
        android:id="@+id/doneForNowBtn"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/light_rounded"
        android:fontFamily="sans-serif-medium"
        android:text="@string/done_for_now_btn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleBtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:fontFamily="casual"
        android:text="@string/title"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmationText"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:text="@string/placeholder_setup_confirmation_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>