<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewBin">

    <TextView
        android:id="@+id/titleAddNewBin"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:fontFamily="casual"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#585858"
        android:textIsSelectable="false"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/binCode"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/white_rounded"
        android:fontFamily="sans-serif-medium"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/bin_code_entry"
        android:textAlignment="center"
        android:textColor="#B2B2B2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/submitNewBinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binName"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/binName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/white_rounded"
        android:fontFamily="sans-serif-medium"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/bin_name_entry"
        android:textAlignment="center"
        android:textColor="#B2B2B2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/binCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/submitNewBinBtn"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/dark_rounded"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_new_bin_btn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binCode" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/titleAddNewBin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dark_grey_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_bin"
        android:textAlignment="center"
        android:textColor="#585858"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/binName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAddNewBin" />

</androidx.constraintlayout.widget.ConstraintLayout>